@@ -1,5 +1,8 @@
 2004-09-03  Chris Dunlap  <cdunlap@llnl.gov>
 
+	* src/munge/munge.c(display_strings,str_to_int):
+	  Tweaked comments and formatting.
+
 	* src/munge/Makefile.am, src/munge/remunge.c: Added.
 
 2004-08-26  Chris Dunlap  <cdunlap@llnl.gov>
